--- a/index.html
+++ b/index.html
@@ -9,43 +9,25 @@
       margin: 0;
       background: #000;
       overflow: hidden;
-      cursor: none; /* Normal cursor gizlenir */
+      cursor: none;
       font-family: Arial, sans-serif;
       color: white;
     }
-
     #spider-canvas {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
     }
-
     .content {
       position: relative;
       z-index: 1;
       text-align: center;
       padding: 150px 20px;
     }
-
-    h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.5em;
-    }
-
-    a {
-      color: #00bfff;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
+    h1 { font-size: 3em; margin-bottom: 10px; }
+    p { font-size: 1.5em; }
+    a { color: #00bfff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -69,7 +51,7 @@
     let w = canvas.width = window.innerWidth;
     let h = canvas.height = window.innerHeight;
 
-    let mouse = { x: w/2, y: h/2 };
+    let mouse = { x: w / 2, y: h / 2 };
 
     window.addEventListener('resize', () => {
       w = canvas.width = window.innerWidth;
@@ -105,31 +87,30 @@
 
         ctx.fillStyle = 'rgba(200,220,255,0.7)';
         ctx.beginPath();
-        ctx.arc(p.x, p.y, p.size, 0, Math.PI*2);
+        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
         ctx.fill();
 
         let dx = p.x - mouse.x;
         let dy = p.y - mouse.y;
-        let dist = Math.sqrt(dx*dx + dy*dy);
+        let dist = Math.sqrt(dx * dx + dy * dy);
 
         if (dist < 140) {
           ctx.beginPath();
           ctx.moveTo(p.x, p.y);
           ctx.lineTo(mouse.x, mouse.y);
-          ctx.strokeStyle = `rgba(100,180,255,${1 - dist/140})`;
+          ctx.strokeStyle = `rgba(100,180,255,${1 - dist / 140})`;
           ctx.lineWidth = 0.8;
           ctx.stroke();
         }
       });
 
-      // Örümcek cursor
       ctx.font = '28px Arial';
       ctx.fillText('🕷️', mouse.x - 14, mouse.y + 12);
 
       requestAnimationFrame(draw);
     }
 
-    draw();
+    draw();  // <- Bu satır önemli, animasyonu başlatır!
   </script>
 </body>
 </html>
