--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bilal Aslan - Portfolio</title>
   
-  <!-- Font Awesome ikonları için (daire menü ikonları) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -24,68 +23,70 @@
       width: 100%; height: 100%;
     }
 
-    .content {
+    .content, .projects {
       position: relative;
       z-index: 1;
       text-align: center;
-      padding: 150px 20px;
+      padding: 40px 20px;
+      background: rgba(0, 0, 0, 0.55);
+      border-radius: 15px;
+      margin: 20px auto;
+      max-width: 900px;
+      box-shadow: 0 0 30px rgba(0, 191, 255, 0.15);
     }
 
     h1 { font-size: 3em; margin-bottom: 10px; }
     h2 { font-size: 2.5em; margin: 60px 0 30px; }
-    p { font-size: 1.5em; margin: 10px 0; }
-    a { color: #00bfff; text-decoration: none; }
+    p { font-size: 1.5em; margin: 10px 0; line-height: 1.5; }
+    a { color: #00d4ff; text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    /* Projeler kartları */
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 30px;
-      max-width: 1200px;
-      margin: 0 auto;
       padding: 0 20px;
     }
 
     .project-card {
       background: rgba(255,255,255,0.05);
-      border: 1px solid #333;
+      border: 1px solid #444;
       border-radius: 10px;
       padding: 25px;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: all 0.3s;
     }
 
     .project-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(0, 191, 255, 0.3);
+      transform: translateY(-8px);
+      box-shadow: 0 10px 30px rgba(0, 191, 255, 0.25);
     }
 
-    /* Daire Sosyal Menü */
+    /* Daire Menü - küçültülmüş ve taşma önlenmiş */
     .social-menu {
       position: fixed;
-      bottom: 40px;
-      right: 40px;
+      bottom: 30px;
+      right: 30px;
       z-index: 1000;
     }
 
     .social-menu .toggle {
-      width: 70px;
-      height: 70px;
+      width: 50px;
+      height: 50px;
       background: #fff;
       border-radius: 50%;
-      box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 3px 12px rgba(0,0,0,0.4);
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #333;
-      font-size: 2em;
+      color: #222;
+      font-size: 1.6em;
       cursor: pointer;
       transition: all 0.5s;
     }
 
     .social-menu .toggle.active {
       transform: rotate(360deg);
-      background: #333;
+      background: #222;
       color: #fff;
     }
 
@@ -112,10 +113,10 @@
     }
 
     .social-menu.active ul li {
-      transform: rotate(calc(360deg / 4 * var(--i))) translateX(120px);
+      transform: rotate(calc(360deg / 4 * var(--i))) translateX(90px); /* taşma önlendi */
       opacity: 1;
       pointer-events: auto;
-      transition-delay: calc(0.1s * var(--i));
+      transition-delay: calc(0.08s * var(--i));
     }
 
     .social-menu ul li a {
@@ -123,22 +124,22 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i)));
-      width: 60px;
-      height: 60px;
+      width: 45px;
+      height: 45px;
       background: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       border-radius: 50%;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-      font-size: 1.8em;
-      color: #333;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      font-size: 1.5em;
+      color: #222;
       transition: 0.3s;
     }
 
     .social-menu ul li a:hover {
-      transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i))) scale(1.2);
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i))) scale(1.15);
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
     }
 
     .social-menu ul li:nth-child(1) a { background: #333; color: #fff; }
@@ -156,7 +157,6 @@
     <p>2. sınıf öğrencisi | Python & C++ | GitHub projeleri yakında</p>
   </div>
 
-  <!-- Projeler Bölümü -->
   <div class="projects">
     <h2>Projelerim</h2>
 
@@ -168,17 +168,9 @@
       </a>
     </div>
 
-    <!-- Yeni proje eklemek istersen buraya benzer kart kopyala -->
-    <!-- Örnek:
-    <div class="project-card">
-      <h3>Yeni Proje Adı</h3>
-      <p>Açıklama buraya...</p>
-      <a href="https://github.com/bilalaslan472/YENI-REPO" target="_blank">GitHub Repo →</a>
-    </div>
-    -->
+    <!-- Yeni projeler buraya eklenebilir -->
   </div>
 
-  <!-- Daire Sosyal Menü -->
   <div class="social-menu">
     <div class="toggle">
       <i class="fas fa-share-alt"></i>
@@ -200,7 +192,7 @@
         </a>
       </li>
       <li style="--i:3;">
-        <a href="https://linkedin.com/in/bilal-aslan" target="_blank">
+        <a href="https://www.linkedin.com/in/bilal-aslan" target="_blank">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
@@ -208,7 +200,7 @@
   </div>
 
   <script>
-    // Spider Cursor Animasyonu
+    // Spider Cursor
     const canvas = document.getElementById('spider-canvas');
     const ctx = canvas.getContext('2d');
 
@@ -228,18 +220,18 @@
     });
 
     let particles = [];
-    for (let i = 0; i < 120; i++) {
+    for (let i = 0; i < 60; i++) {  // azaltıldı
       particles.push({
         x: Math.random() * w,
         y: Math.random() * h,
         size: Math.random() * 2 + 1,
-        vx: Math.random() * 0.6 - 0.3,
-        vy: Math.random() * 0.6 - 0.3
+        vx: Math.random() * 0.5 - 0.25,
+        vy: Math.random() * 0.5 - 0.25
       });
     }
 
     function draw() {
-      ctx.fillStyle = 'rgba(0,0,0,0.05)';
+      ctx.fillStyle = 'rgba(0,0,0,0.008)';  // çok hafif fade
       ctx.fillRect(0, 0, w, h);
 
       particles.forEach(p => {
@@ -258,12 +250,12 @@
         let dy = p.y - mouse.y;
         let dist = Math.sqrt(dx * dx + dy * dy);
 
-        if (dist < 140) {
+        if (dist < 80) {  // mesafe azaltıldı
           ctx.beginPath();
           ctx.moveTo(p.x, p.y);
           ctx.lineTo(mouse.x, mouse.y);
-          ctx.strokeStyle = `rgba(100,180,255,${1 - dist / 140})`;
-          ctx.lineWidth = 0.8;
+          ctx.strokeStyle = `rgba(100,180,255,${1 - dist / 80})`;
+          ctx.lineWidth = 0.7;
           ctx.stroke();
         }
       });
@@ -280,10 +272,12 @@
     const socialToggle = document.querySelector('.social-menu .toggle');
     const socialMenu = document.querySelector('.social-menu');
 
-    socialToggle.addEventListener('click', () => {
-      socialToggle.classList.toggle('active');
-      socialMenu.classList.toggle('active');
-    });
+    if (socialToggle && socialMenu) {
+      socialToggle.addEventListener('click', () => {
+        socialToggle.classList.toggle('active');
+        socialMenu.classList.toggle('active');
+      });
+    }
   </script>
 </body>
 </html>
