--- a/index.html
+++ b/index.html
@@ -4,119 +4,138 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bilal Aslan - Portfolio</title>
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <style>
     body {
       margin: 0;
       background: #000;
-      overflow: hidden;
+      overflow-x: hidden;
       cursor: none;
-      font-family: Arial, sans-serif;
-      color: white;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      color: #fff;
+      line-height: 1.6;
     }
 
     #spider-canvas {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      inset: 0;
+      z-index: -1;
     }
 
-    .content, .projects {
+    .container {
       position: relative;
       z-index: 1;
-      text-align: center;
-      padding: 40px 20px;
-      background: rgba(0, 0, 0, 0.55);
-      border-radius: 15px;
-      margin: 20px auto;
-      max-width: 900px;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 0.15);
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 60px 20px;
     }
 
-    h1 { font-size: 3em; margin-bottom: 10px; }
-    h2 { font-size: 2.5em; margin: 60px 0 30px; }
-    p { font-size: 1.5em; margin: 10px 0; line-height: 1.5; }
-    a { color: #00d4ff; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    header {
+      text-align: center;
+      margin-bottom: 80px;
+    }
 
-    .projects {
+    h1 {
+      font-size: 4em;
+      margin: 0;
+      text-shadow: 0 0 20px rgba(0, 191, 255, 0.6);
+    }
+
+    .subtitle {
+      font-size: 1.6em;
+      opacity: 0.9;
+      margin: 15px 0;
+    }
+
+    section {
+      margin-bottom: 100px;
+      background: rgba(0, 0, 0, 0.65);
+      border-radius: 16px;
+      padding: 40px;
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(255,255,255,0.08);
+    }
+
+    h2 {
+      font-size: 2.8em;
+      margin-bottom: 30px;
+      text-align: center;
+      color: #00d4ff;
+    }
+
+    .project-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
       gap: 30px;
-      padding: 0 20px;
     }
 
     .project-card {
-      background: rgba(255,255,255,0.05);
-      border: 1px solid #444;
-      border-radius: 10px;
+      background: rgba(20, 20, 30, 0.7);
+      border-radius: 12px;
       padding: 25px;
-      transition: all 0.3s;
+      transition: all 0.4s ease;
+      border: 1px solid rgba(0, 212, 255, 0.15);
     }
 
     .project-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 30px rgba(0, 191, 255, 0.25);
+      transform: translateY(-12px);
+      box-shadow: 0 20px 40px rgba(0, 212, 255, 0.25);
+      border-color: #00d4ff;
     }
 
-    /* Daire Menü - küçültülmüş ve taşma önlenmiş */
+    .project-card h3 {
+      margin-top: 0;
+      color: #00d4ff;
+    }
+
     .social-menu {
       position: fixed;
-      bottom: 30px;
-      right: 30px;
-      z-index: 1000;
+      bottom: 25px;
+      right: 25px;
+      z-index: 999;
     }
 
     .social-menu .toggle {
-      width: 50px;
-      height: 50px;
+      width: 55px;
+      height: 55px;
       background: #fff;
       border-radius: 50%;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.4);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #222;
-      font-size: 1.6em;
+      color: #111;
+      font-size: 1.7em;
       cursor: pointer;
-      transition: all 0.5s;
+      transition: all 0.6s;
     }
 
     .social-menu .toggle.active {
       transform: rotate(360deg);
-      background: #222;
+      background: #111;
       color: #fff;
     }
 
     .social-menu ul {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       list-style: none;
       pointer-events: none;
     }
 
     .social-menu ul li {
       position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       transform: rotate(calc(360deg / 4 * var(--i))) translateX(0);
-      transition: 0.5s;
+      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
       opacity: 0;
       pointer-events: none;
     }
 
     .social-menu.active ul li {
-      transform: rotate(calc(360deg / 4 * var(--i))) translateX(90px); /* taşma önlendi */
+      transform: rotate(calc(360deg / 4 * var(--i))) translateX(85px);
       opacity: 1;
       pointer-events: auto;
-      transition-delay: calc(0.08s * var(--i));
     }
 
     .social-menu ul li a {
@@ -124,80 +143,85 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i)));
-      width: 45px;
-      height: 45px;
+      width: 48px;
+      height: 48px;
       background: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       border-radius: 50%;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      font-size: 1.5em;
-      color: #222;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+      font-size: 1.6em;
+      color: #111;
       transition: 0.3s;
     }
 
     .social-menu ul li a:hover {
-      transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i))) scale(1.15);
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      transform: translate(-50%, -50%) rotate(calc(-360deg / 4 * var(--i))) scale(1.2);
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
-    .social-menu ul li:nth-child(1) a { background: #333; color: #fff; }
+    .social-menu ul li:nth-child(1) a { background: #24292e; color: #fff; }
     .social-menu ul li:nth-child(2) a { background: #1da1f2; color: #fff; }
     .social-menu ul li:nth-child(3) a { background: #e4405f; color: #fff; }
-    .social-menu ul li:nth-child(4) a { background: #0077b5; color: #fff; }
+    .social-menu ul li:nth-child(4) a { background: #0a66c2; color: #fff; }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      color: #888;
+      font-size: 0.9em;
+      border-top: 1px solid #222;
+    }
   </style>
 </head>
 <body>
   <canvas id="spider-canvas"></canvas>
 
-  <div class="content">
-    <h1>Merhaba! Ben Bilal ASLAN</h1>
-    <p>Atatürk Üniversitesi, Bilgisayar Mühendisliği</p>
-    <p>2. sınıf öğrencisi | Python & C++ | GitHub projeleri yakında</p>
+  <div class="container">
+    <header>
+      <h1>Merhaba! Ben Bilal ASLAN</h1>
+      <p class="subtitle">
+        Atatürk Üniversitesi, Bilgisayar Mühendisliği<br>
+        2. sınıf öğrencisi | Python & C++ | GitHub projeleri yakında
+      </p>
+    </header>
+
+    <section id="projects">
+      <h2>Projelerim</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>WheelOfFate - Circular Linked List Game</h3>
+          <p>C++ ile yapılmış hybrid veri yapısı: Dairesel bağlı liste + stack + hash table ile dinamik spin ve rollback özelliği.</p>
+          <a href="https://github.com/bilalaslan472/WheelOfFate_CircularLinkedListGame" target="_blank">
+            GitHub Repo →
+          </a>
+        </div>
+
+        <!-- Buraya yeni proje kartı ekleyebilirsin -->
+      </div>
+    </section>
+
+    <!-- İletişim / Hakkımda bölümü istersen buraya ekle -->
   </div>
 
-  <div class="projects">
-    <h2>Projelerim</h2>
-
-    <div class="project-card">
-      <h3>WheelOfFate - Circular Linked List Game</h3>
-      <p>C++ ile yapılmış hybrid veri yapısı: Dairesel bağlı liste + stack + hash table ile dinamik spin ve rollback özelliği.</p>
-      <a href="https://github.com/bilalaslan472/WheelOfFate_CircularLinkedListGame" target="_blank">
-        GitHub Repo →
-      </a>
-    </div>
-
-    <!-- Yeni projeler buraya eklenebilir -->
-  </div>
-
+  <!-- Daire Menü -->
   <div class="social-menu">
     <div class="toggle">
       <i class="fas fa-share-alt"></i>
     </div>
     <ul>
-      <li style="--i:0;">
-        <a href="https://github.com/bilalaslan472" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-      </li>
-      <li style="--i:1;">
-        <a href="https://x.com/lyrx04" target="_blank">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </li>
-      <li style="--i:2;">
-        <a href="https://instagram.com" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-      <li style="--i:3;">
-        <a href="https://www.linkedin.com/in/bilal-aslan" target="_blank">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-      </li>
+      <li style="--i:0;"><a href="https://github.com/bilalaslan472" target="_blank"><i class="fab fa-github"></i></a></li>
+      <li style="--i:1;"><a href="https://x.com/lyrx04" target="_blank"><i class="fab fa-x-twitter"></i></a></li>
+      <li style="--i:2;"><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      <li style="--i:3;"><a href="https://www.linkedin.com/in/bilal-aslan" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
     </ul>
   </div>
+
+  <footer>
+    © 2026 Bilal Aslan • Tüm hakları saklıdır • 
+    <a href="mailto:bilalaslan472@gmail.com">İletişime geç</a>
+  </footer>
 
   <script>
     // Spider Cursor
@@ -220,18 +244,18 @@
     });
 
     let particles = [];
-    for (let i = 0; i < 60; i++) {  // azaltıldı
+    for (let i = 0; i < 50; i++) {
       particles.push({
         x: Math.random() * w,
         y: Math.random() * h,
-        size: Math.random() * 2 + 1,
-        vx: Math.random() * 0.5 - 0.25,
-        vy: Math.random() * 0.5 - 0.25
+        size: Math.random() * 1.8 + 0.8,
+        vx: Math.random() * 0.4 - 0.2,
+        vy: Math.random() * 0.4 - 0.2
       });
     }
 
     function draw() {
-      ctx.fillStyle = 'rgba(0,0,0,0.008)';  // çok hafif fade
+      ctx.fillStyle = 'rgba(0,0,0,0.008)';
       ctx.fillRect(0, 0, w, h);
 
       particles.forEach(p => {
@@ -241,7 +265,7 @@
         if (p.x < 0 || p.x > w) p.vx *= -1;
         if (p.y < 0 || p.y > h) p.vy *= -1;
 
-        ctx.fillStyle = 'rgba(200,220,255,0.7)';
+        ctx.fillStyle = 'rgba(180,220,255,0.6)';
         ctx.beginPath();
         ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
         ctx.fill();
@@ -250,34 +274,32 @@
         let dy = p.y - mouse.y;
         let dist = Math.sqrt(dx * dx + dy * dy);
 
-        if (dist < 80) {  // mesafe azaltıldı
+        if (dist < 90) {
           ctx.beginPath();
           ctx.moveTo(p.x, p.y);
           ctx.lineTo(mouse.x, mouse.y);
-          ctx.strokeStyle = `rgba(100,180,255,${1 - dist / 80})`;
-          ctx.lineWidth = 0.7;
+          ctx.strokeStyle = `rgba(80,160,255,${0.8 - dist / 90})`;
+          ctx.lineWidth = 0.6;
           ctx.stroke();
         }
       });
 
-      ctx.font = '28px Arial';
-      ctx.fillText('🕷️', mouse.x - 14, mouse.y + 12);
+      ctx.font = '26px Arial';
+      ctx.fillText('🕷️', mouse.x - 13, mouse.y + 10);
 
       requestAnimationFrame(draw);
     }
 
     draw();
 
-    // Daire Menü Toggle
-    const socialToggle = document.querySelector('.social-menu .toggle');
-    const socialMenu = document.querySelector('.social-menu');
+    // Daire Menü
+    const toggle = document.querySelector('.social-menu .toggle');
+    const menu = document.querySelector('.social-menu');
 
-    if (socialToggle && socialMenu) {
-      socialToggle.addEventListener('click', () => {
-        socialToggle.classList.toggle('active');
-        socialMenu.classList.toggle('active');
-      });
-    }
+    toggle.addEventListener('click', () => {
+      toggle.classList.toggle('active');
+      menu.classList.toggle('active');
+    });
   </script>
 </body>
 </html>
