--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       });
 
       ctx.font = '26px Arial';
-      ctx.fillText('🕷️', mouse.x - 13, mouse.y + 10);
+      ctx.fillText('🌐', mouse.x - 13, mouse.y + 10);
 
       requestAnimationFrame(draw);
     }
